размечает логотип в header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+<header class="page-header">
+<nav class="navigation">
+<ul class="navigation-list">
+  <li class="navigation-item">
+<img class="page-logo" src="index.html" alt="Описание картинки">
+  </li>
 
+</ul>
+</nav>
+</header>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </body>
