--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
   <body>
 <header class="page-header">
 <nav class="navigation">
-<ul class="navigation-list">
-  <li class="navigation-item">
-<img class="page-logo" src="index.html" alt="Описание картинки">
-  </li>
-
-</ul>
+  <a class="navigation-logo" href="index.html">
+    <img class="page-logo" src="index.html" alt="Описание картинки">
+  </a>
 </nav>
 </header>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
