--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <a class="navigation-logo" href="index.html">
     <img class="page-logo" src="index.html" alt="Описание картинки">
   </a>
+  <ul class="navigation-list">
+    <li class="navigation-item">
+      <a class="navigation-link navigation-link-current" href="#">Главная</a>
+    </li>
+    <li class="navigation-item">
+      <a class="navigation-link navigation-link-current" href="#">О Седоне</a>
+    </li>
+    <li class="navigation-item">
+      <a class="navigation-link navigation-link-current" href="#">Гостиницы</a>
+    </li>
+  </ul>
 </nav>
 </header>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
