создает разметку иконок в header

--- a/index.html
+++ b/index.html
@@ -15,10 +15,25 @@
       <a class="navigation-link navigation-link-current" href="#">Главная</a>
     </li>
     <li class="navigation-item">
-      <a class="navigation-link navigation-link-current" href="#">О Седоне</a>
+      <a class="navigation-link href="#">О Седоне</a>
     </li>
     <li class="navigation-item">
-      <a class="navigation-link navigation-link-current" href="#">Гостиницы</a>
+      <a class="navigation-link href="#">Гостиницы</a>
+    </li>
+  </ul>
+  <ul class="navigation-user">
+    <li class="navigation-item">
+      <a class="navigation-link" href="#">
+        <span class="visually-hidden">Поиск</span>
+      </a>
+    </li>
+    <li class="navigation-item">
+      <a class="navigation-link href="#">
+        <span class="visually-hidden">Избранное</span>
+      </a>
+    </li>
+    <li class="navigation-item">
+      <a class="button" href="#">Хочу сюда</a>
     </li>
   </ul>
 </nav>
