размечает главный баннер на странице

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
   </ul>
 </nav>
 </header>
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<main class="main-index">
+  <h1 class="visually-hidden">SEDONA</h1>
+  <img class="logo" src="#" alt="Логотип SEDONA"
+  <p><h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2></p>
+  <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+</main>
 
   </body>
 </html>
