--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
   <p><h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2></p>
   <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
 </main>
+<section class="advantages">
+  <h2 class="visually-hidden">Преимущества</h2>
+  <ul class="advantages-list">
+    <li class="advantages-item">Настоящий городок</li>
+    <img class="image" src="#" alt="Описание картинки">
+    <dl>
+      <dt>Жильё</dt>
+      <dd>Рекомендуем пожить в настоящем мотеле, всё как в кино!</dd>
+    </dl>
+    <dl>
+      <dt>Еда</dt>
+      <dd>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</dd>
+    </dl>
+    <dl>
+      <dt>Сувениры</dt>
+      <dd>Не только китайского, но и настоящего местного производства!</dd>
+    </dl>
 
+
+
+  </ul>
+
+</section>
   </body>
 </html>
