размечает второе преимущество на главной

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       <dt>Сувениры</dt>
       <dd>Не только китайского, но и настоящего местного производства!</dd>
     </dl>
+    <li class="advantages-item">Там есть мост дьявола</li>
+    <p class=”advantages-description”> Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+    <img class="image" src="#" alt="Описание картинки">
 
 
 
