--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <h2 class="visually-hidden">Преимущества</h2>
   <ul class="advantages-list">
     <li class="advantages-item">Настоящий городок</li>
+    <p class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
     <img class="image" src="#" alt="Описание картинки">
     <dl>
       <dt>Жильё</dt>
