добавляет преимущества 3,4,5 на главной

--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
     <li class="advantages-item">Там есть мост дьявола</li>
     <p class=”advantages-description”> Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
     <img class="image" src="#" alt="Описание картинки">
-
-
-
+    <li class="advantages-item">Небольшая площадь</li>
+    <p class=”advantages-description”>Все достопримечательности находятся очень близко</p>
+    <li class="advantages-item">Красивая дорога</li>
+    <p class=”advantages-description”>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+    <li class="advantages-item">Мало туристов</li>
+    <p class=”advantages-description”>Большинство едет в Гранд Каньон и толпится там</p>
   </ul>
 
 </section>
