--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
     <li class="advantages-item">Мало туристов</li>
     <p class=”advantages-description”>Большинство едет в Гранд Каньон и толпится там</p>
   </ul>
-
+</section>
+<section class="search">
+  <h2 class="visually-hidden">Поиск гостиницы</h2>
+  <strong>Заинтересовались?</strong>
+  <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+  <a class="button" href="#"><b>Поиск гостиницы в Седоне</b></a>
 </section>
   </body>
 </html>
