--- a/index.html
+++ b/index.html
@@ -79,5 +79,14 @@
   <a class="button" href="#"><b>Поиск гостиницы в Седоне</b></a>
 </section>
 </main>
+<section class="appointment">
+  <h2 class="appointment-title"><b>Подпишитесь на рассылку</b></h2>
+  <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+  <form class="appointment-form-email> action="https://echo.htmlacademy.ru/" method="post">
+    <label for="appointment-email"></label>
+    <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
+    <button class="button" type="submit">ПОДПИСАТЬСЯ</button>
+  </form>
+</section>
   </body>
 </html>
