--- a/index.html
+++ b/index.html
@@ -88,5 +88,32 @@
     <button class="button" type="submit">ПОДПИСАТЬСЯ</button>
   </form>
 </section>
+<footer class="page-footer">
+  <section class="footer-socials">
+    <h2 class="visually-hidden">Социальные сети</h2>
+    <ul class="footer-social-list">
+      <li class="footer-social-item">
+        <a class="button" href="https://vk.com/htmlacademy"></a>
+        <span class="visually-hidden">Vkontakte</span>
+      </li>
+      <li class="footer-social-item">
+        <a class="button" href="https://t.me/htmlacademy"></a>
+        <span class="visually-hidden">Telegram</span>
+      </li>
+      <li class="footer-social-item">
+        <a class="button" href="https://www.youtube.com/user/htmlacademyru"></a>
+        <span class="visually-hidden">Youtube</span>
+      </li>
+    </ul>
+  </section>
+  <section class="footer-contact">
+    <h2 class="visually-hidden">Телефон</h2>
+    <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+  </section>
+  <section class="logo">
+    <h2 class="visually-hidden">Логотип</h2>
+    <img class="footer-logo" src="https://htmlacademy.ru/" alt="Логотип SEDONA">
+  </section>
+</footer>
   </body>
 </html>
