исправляет классы в меню

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <a class="navigation-link navigation-link-current" href="#">Главная</a>
     </li>
     <li class="navigation-item">
-      <a class="navigation-link href="#">О Седоне</a>
+      <a class="navigation-link" href="#">О Седоне</a>
     </li>
     <li class="navigation-item">
-      <a class="navigation-link href="#">Гостиницы</a>
+      <a class="navigation-link" href="#">Гостиницы</a>
     </li>
   </ul>
   <ul class="navigation-user">
@@ -28,7 +28,7 @@
       </a>
     </li>
     <li class="navigation-item">
-      <a class="navigation-link href="#">
+      <a class="navigation-link" href="#">
         <span class="visually-hidden">Избранное</span>
       </a>
     </li>
