--- a/catalog.html
+++ b/catalog.html
@@ -38,3 +38,12 @@
   </ul>
 </nav>
 </header>
+<section class="appointment-catalog">
+  <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
+  <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+  <form class="appointment-catalog-form-email> action="https://echo.htmlacademy.ru/" method="post">
+    <label for="appointment-email"></label>
+    <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
+    <button class="button" type="submit">ПОДПИСАТЬСЯ</button>
+  </form>
+</section>
