размечает сортировку и варианты показа карточек

--- a/catalog.html
+++ b/catalog.html
@@ -118,6 +118,21 @@
       <button class="button-hidden" type="submit">Сбросить</button>
     </form>
   </section>
+  <section class="catalog-products">
+    <h2 class="visually-hidden">Результаты поиска</h2>
+    <b>Найдено гостиниц: 38</b>
+    <select class="select-control" aria-label="Сортировка">
+      <option value="cheap">Сначала дешёвые</option>
+    </select>
+    <a class="button" href="#">
+      <span class="visually-hidden">Показать карточки</span>
+    </a>
+    <a href="#" class="button button-light">
+      <span class="visually-hidden">Показать слайд</span>
+    </a>
+    <a class="button" href="#">
+      <span class="visually-hidden">Показать список</span>
+    </a>
 </main>
 <section class="appointment-catalog">
   <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
