размечает первую карточку товара

--- a/catalog.html
+++ b/catalog.html
@@ -133,6 +133,18 @@
     <a class="button" href="#">
       <span class="visually-hidden">Показать список</span>
     </a>
+  </section>
+  <div class="product-card">
+    <a class="product-card-link" href="#">
+      <img class="product-card-image" src="#" alt="Описание картинки">
+      <h3 class="product-card-title">Amara Resort & Spa</h3>
+      <div>Гостиница</div>
+      <div>От 4000 ₽</div>
+    </a>
+    <a class="product-card-button button" href="#">подробнее</a>
+    <button class="button" type="add">в избранное</button>
+  </div>
+
 </main>
 <section class="appointment-catalog">
   <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
