исправляет карточку первого товара

--- a/catalog.html
+++ b/catalog.html
@@ -138,13 +138,20 @@
     <a class="product-card-link" href="#">
       <img class="product-card-image" src="#" alt="Описание картинки">
       <h3 class="product-card-title">Amara Resort & Spa</h3>
-      <div>Гостиница</div>
-      <div>От 4000 ₽</div>
     </a>
+  </div>
+  <div>Гостиница</div>
+  <div>От 4000 ₽</div>
     <a class="product-card-button button" href="#">подробнее</a>
     <button class="button" type="add">в избранное</button>
+  <div class="rating-result">
+    <span class="active"></span>
+    <span class="active"></span>
+    <span class="active"></span>
+    <span class="active"></span>
+    <span></span>
   </div>
-
+  <img class="product-card-image" src="#" alt="Описание картинки">
 </main>
 <section class="appointment-catalog">
   <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
