--- a/catalog.html
+++ b/catalog.html
@@ -149,9 +149,63 @@
       <span class="active"></span>
       <span class="active"></span>
       <span></span>
-    </div> 
+    </div>
     <img class="product-card-image" src="#" alt="Описание картинки">
-</div>
+  </div>
+  <div class="product-card">
+    <a class="product-card-link" href="#">
+      <img class="product-card-image" src="#" alt="Описание картинки">
+      <h3 class="product-card-title">Villas at Poco Diablo</h3>
+    </a>
+    <div>Гостиница</div>
+    <div>От 5000 ₽</div>
+      <a class="product-card-button button" href="#">подробнее</a>
+      <button class="button" type="add">в избранное</button>
+    <div class="rating-result">
+      <span class="active"></span>
+      <span class="active"></span>
+      <span class="active"></span>
+      <span class="active"></span>
+      <span></span>
+    </div>
+    <img class="product-card-image" src="#" alt="Описание картинки">
+  </div>
+  <div class="product-card">
+    <a class="product-card-link" href="#">
+      <img class="product-card-image" src="#" alt="Описание картинки">
+      <h3 class="product-card-title">Desert Quail Inn</h3>
+    </a>
+    <div>Гостиница</div>
+    <div>От 2500 ₽</div>
+      <a class="product-card-button button" href="#">подробнее</a>
+      <button class="button" type="add">в избранное</button>
+    <div class="rating-result">
+      <span class="active"></span>
+      <span class="active"></span>
+      <span class="active"></span>
+      <span></span>
+      <span></span>
+    </div>
+    <img class="product-card-image" src="#" alt="Описание картинки">
+  </div>
+  <div class="product-card">
+    <a class="product-card-link" href="#">
+      <img class="product-card-image" src="#" alt="Описание картинки">
+      <h3 class="product-card-title">GreenTree Inn</h3>
+    </a>
+    <div>Гостиница</div>
+    <div>От 1500 ₽</div>
+      <a class="product-card-button button" href="#">подробнее</a>
+      <button class="button" type="add">в избранное</button>
+    <div class="rating-result">
+      <span class="active"></span>
+      <span class="active"></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <img class="product-card-image" src="#" alt="Описание картинки">
+  </div>
 </main>
 <section class="appointment-catalog">
   <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
