добавляет ссылки на страницы 1,2,3,4

--- a/catalog.html
+++ b/catalog.html
@@ -206,6 +206,28 @@
     </div>
     <img class="product-card-image" src="#" alt="Описание картинки">
   </div>
+  <ul class="pagination">
+    <li class="pagination-item">
+      <a class="pagination-link pagination-current">1</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link" href="#">2</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link" href="#">3</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link" href="#">4</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link" href="#">...</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link pagination-next" href="#">
+        <span class="visually-hidden">10</span>
+      </a>
+    </li>
+  </ul>
 </main>
 <section class="appointment-catalog">
   <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
