добавляет селект Гостиниц на странице

--- a/catalog.html
+++ b/catalog.html
@@ -228,6 +228,10 @@
       </a>
     </li>
   </ul>
+  Гостиниц на странице:
+  <select class="select-control" aria-label="Гостиниц на странице:">
+    <option value="cheap">4</option>
+  </select>
 </main>
 <section class="appointment-catalog">
   <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
