--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </header>
 <main class="main-index">
   <h1 class="visually-hidden">SEDONA</h1>
-  <img class="logo" src="#" alt="Логотип SEDONA"
+  <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA"
   <p><h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2></p>
   <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
 <section class="advantages">
