--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <ul class="advantages-list">
     <li class="advantages-item">Настоящий городок</li>
     <p class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-    <img class="image" src="#" alt="Описание картинки">
+    <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
     <dl>
       <dt>Жильё</dt>
       <dd>Рекомендуем пожить в настоящем мотеле, всё как в кино!</dd>
