--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 <header class="page-header">
 <nav class="navigation">
   <a class="navigation-logo" href="index.html">
-    <img class="page-logo" src="index.html" alt="Описание картинки">
+    <img class="page-logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
   </a>
   <ul class="navigation-list">
     <li class="navigation-item">
