--- a/catalog.html
+++ b/catalog.html
@@ -136,7 +136,7 @@
   </section>
   <div class="product-card">
     <a class="product-card-link" href="#">
-      <img class="product-card-image" src="#" alt="Описание картинки">
+      <img class="product-card-image" src="images/hotel-1-1.jpg" width="300" height="211" alt="Коньон и звездное небо в Amara Resort & Spa">
       <h3 class="product-card-title">Amara Resort & Spa</h3>
     </a>
     <div>Гостиница</div>
