добавляет картинку Villas at Poco Diablo

--- a/catalog.html
+++ b/catalog.html
@@ -154,7 +154,7 @@
   </div>
   <div class="product-card">
     <a class="product-card-link" href="#">
-      <img class="product-card-image" src="#" alt="Описание картинки">
+      <img class="product-card-image" src="images/hotel-1-2.jpg" width="300" height="211" alt="Вид на горы в Villas at Poco Diablo">
       <h3 class="product-card-title">Villas at Poco Diablo</h3>
     </a>
     <div>Гостиница</div>
