--- a/catalog.html
+++ b/catalog.html
@@ -172,7 +172,7 @@
   </div>
   <div class="product-card">
     <a class="product-card-link" href="#">
-      <img class="product-card-image" src="#" alt="Описание картинки">
+      <img class="product-card-image" src="images/hotel-1-3.jpg" width="300" height="211" alt="Вид на горы в Desert Quail Inn">
       <h3 class="product-card-title">Desert Quail Inn</h3>
     </a>
     <div>Гостиница</div>
