добавляет картинку GreenTree Inn

--- a/catalog.html
+++ b/catalog.html
@@ -190,7 +190,7 @@
   </div>
   <div class="product-card">
     <a class="product-card-link" href="#">
-      <img class="product-card-image" src="#" alt="Описание картинки">
+      <img class="product-card-image" src="images/hotel-1.jpg" width="300" height="211" alt="Звездное небо и горы в GreenTree Inn">
       <h3 class="product-card-title">GreenTree Inn</h3>
     </a>
     <div>Гостиница</div>
