добавляет логотип html academy в футер каталога

--- a/catalog.html
+++ b/catalog.html
@@ -266,7 +266,7 @@
   </section>
   <section class="logo">
     <h2 class="visually-hidden">Логотип</h2>
-    <img class="footer-logo" src="https://htmlacademy.ru/" alt="Логотип SEDONA">
+    <img class="footer-logo" src="images/logo-html-academy.svg" width="114.9" height="32.9" alt="Логотип html-academy">
   </section>
 </footer>
 </body>
