--- a/2/index.html
+++ b/2/index.html
@@ -1,120 +1,122 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-    <base href="https://htmlacademy-htmlcss.github.io/2048909-sedona-34/2/">
+   <head>
+      <meta charset="utf-8">
+      <title>HTML Academy: Седона</title>
+     <base href="https://htmlacademy-htmlcss.github.io/2048909-sedona-34/2/">
 </head>
-  <body>
-<header class="page-header">
-<nav class="navigation">
-  <a class="navigation-logo" href="index.html">
-    <img class="page-logo" src="index.html" alt="Описание картинки">
-  </a>
-  <ul class="navigation-list">
-    <li class="navigation-item">
-      <a class="navigation-link navigation-link-current" href="#">Главная</a>
-    </li>
-    <li class="navigation-item">
-      <a class="navigation-link" href="#">О Седоне</a>
-    </li>
-    <li class="navigation-item">
-      <a class="navigation-link" href="#">Гостиницы</a>
-    </li>
-  </ul>
-  <ul class="navigation-user">
-    <li class="navigation-item">
-      <a class="navigation-link" href="#">
-        <span class="visually-hidden">Поиск</span>
-      </a>
-    </li>
-    <li class="navigation-item">
-      <a class="navigation-link" href="#">
-        <span class="visually-hidden">Избранное</span>
-      </a>
-    </li>
-    <li class="navigation-item">
-      <a class="button" href="#">Хочу сюда</a>
-    </li>
-  </ul>
-</nav>
-</header>
-<main class="main-index">
-  <h1 class="visually-hidden">SEDONA</h1>
-  <img class="logo" src="#" alt="Логотип SEDONA"
-  <p><h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2></p>
-  <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-<section class="advantages">
-  <h2 class="visually-hidden">Преимущества</h2>
-  <ul class="advantages-list">
-    <li class="advantages-item">Настоящий городок</li>
-    <p class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-    <img class="image" src="#" alt="Описание картинки">
-    <dl>
-      <dt>Жильё</dt>
-      <dd>Рекомендуем пожить в настоящем мотеле, всё как в кино!</dd>
-    </dl>
-    <dl>
-      <dt>Еда</dt>
-      <dd>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</dd>
-    </dl>
-    <dl>
-      <dt>Сувениры</dt>
-      <dd>Не только китайского, но и настоящего местного производства!</dd>
-    </dl>
-    <li class="advantages-item">Там есть мост дьявола</li>
-    <p class=”advantages-description”> Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-    <img class="image" src="#" alt="Описание картинки">
-    <li class="advantages-item">Небольшая площадь</li>
-    <p class=”advantages-description”>Все достопримечательности находятся очень близко</p>
-    <li class="advantages-item">Красивая дорога</li>
-    <p class=”advantages-description”>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-    <li class="advantages-item">Мало туристов</li>
-    <p class=”advantages-description”>Большинство едет в Гранд Каньон и толпится там</p>
-  </ul>
-</section>
-<section class="search">
-  <h2 class="visually-hidden">Поиск гостиницы</h2>
-  <strong>Заинтересовались?</strong>
-  <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-  <a class="button" href="#"><b>Поиск гостиницы в Седоне</b></a>
-</section>
-</main>
-<section class="appointment">
-  <h2 class="appointment-title"><b>Подпишитесь на рассылку</b></h2>
-  <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-  <form class="appointment-form-email> action="https://echo.htmlacademy.ru/" method="post">
-    <label for="appointment-email"></label>
-    <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
-    <button class="button" type="submit">ПОДПИСАТЬСЯ</button>
-  </form>
-</section>
-<footer class="page-footer">
-  <section class="footer-socials">
-    <h2 class="visually-hidden">Социальные сети</h2>
-    <ul class="footer-social-list">
-      <li class="footer-social-item">
-        <a class="button" href="https://vk.com/htmlacademy"></a>
-        <span class="visually-hidden">Vkontakte</span>
-      </li>
-      <li class="footer-social-item">
-        <a class="button" href="https://t.me/htmlacademy"></a>
-        <span class="visually-hidden">Telegram</span>
-      </li>
-      <li class="footer-social-item">
-        <a class="button" href="https://www.youtube.com/user/htmlacademyru"></a>
-        <span class="visually-hidden">Youtube</span>
-      </li>
-    </ul>
-  </section>
-  <section class="footer-contact">
-    <h2 class="visually-hidden">Телефон</h2>
-    <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-  </section>
-  <section class="logo">
-    <h2 class="visually-hidden">Логотип</h2>
-    <img class="footer-logo" src="https://htmlacademy.ru/" alt="Логотип SEDONA">
-  </section>
-</footer>
-  </body>
+   <body>
+      <header class="page-header">
+         <nav class="navigation">
+            <a class="navigation-logo" href="index.html">
+            <img class="page-logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
+            </a>
+            <ul class="navigation-list">
+               <li class="navigation-item">
+                  <a class="navigation-link navigation-link-current" href="#">Главная</a>
+               </li>
+               <li class="navigation-item">
+                  <a class="navigation-link" href="#">О Седоне</a>
+               </li>
+               <li class="navigation-item">
+                  <a class="navigation-link" href="#">Гостиницы</a>
+               </li>
+            </ul>
+            <ul class="navigation-user">
+               <li class="navigation-item">
+                  <a class="navigation-link" href="#">
+                  <span class="visually-hidden">Поиск</span>
+                  </a>
+               </li>
+               <li class="navigation-item">
+                  <a class="navigation-link" href="#">
+                  <span class="visually-hidden">Избранное</span>
+                  </a>
+               </li>
+               <li class="navigation-item">
+                  <a class="button" href="#">Хочу сюда</a>
+               </li>
+            </ul>
+         </nav>
+      </header>
+      <main class="main-index">
+         <h1 class="visually-hidden">SEDONA</h1>
+         <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA"
+         <p>
+         <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+         </p>
+         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+         <section class="advantages">
+            <h2 class="visually-hidden">Преимущества</h2>
+            <ul class="advantages-list">
+               <li class="advantages-item">Настоящий городок</li>
+               <p class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+               <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
+               <dl>
+                  <dt>Жильё</dt>
+                  <dd>Рекомендуем пожить в настоящем мотеле, всё как в кино!</dd>
+               </dl>
+               <dl>
+                  <dt>Еда</dt>
+                  <dd>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</dd>
+               </dl>
+               <dl>
+                  <dt>Сувениры</dt>
+                  <dd>Не только китайского, но и настоящего местного производства!</dd>
+               </dl>
+               <li class="advantages-item">Там есть мост дьявола</li>
+               <p class=”advantages-description”> Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+               <img class="image" src="#" alt="Описание картинки">
+               <li class="advantages-item">Небольшая площадь</li>
+               <p class=”advantages-description”>Все достопримечательности находятся очень близко</p>
+               <li class="advantages-item">Красивая дорога</li>
+               <p class=”advantages-description”>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+               <li class="advantages-item">Мало туристов</li>
+               <p class=”advantages-description”>Большинство едет в Гранд Каньон и толпится там</p>
+            </ul>
+         </section>
+         <section class="search">
+            <h2 class="visually-hidden">Поиск гостиницы</h2>
+            <strong>Заинтересовались?</strong>
+            <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="button" href="#"><b>Поиск гостиницы в Седоне</b></a>
+         </section>
+      </main>
+      <section class="appointment">
+         <h2 class="appointment-title"><b>Подпишитесь на рассылку</b></h2>
+         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+         <form class="appointment-form-email> action="https://echo.htmlacademy.ru/" method="post">
+         <label for="appointment-email"></label>
+         <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
+         <button class="button" type="submit">ПОДПИСАТЬСЯ</button>
+         </form>
+      </section>
+      <footer class="page-footer">
+         <section class="footer-socials">
+            <h2 class="visually-hidden">Социальные сети</h2>
+            <ul class="footer-social-list">
+               <li class="footer-social-item">
+                  <a class="button" href="https://vk.com/htmlacademy"></a>
+                  <span class="visually-hidden">Vkontakte</span>
+               </li>
+               <li class="footer-social-item">
+                  <a class="button" href="https://t.me/htmlacademy"></a>
+                  <span class="visually-hidden">Telegram</span>
+               </li>
+               <li class="footer-social-item">
+                  <a class="button" href="https://www.youtube.com/user/htmlacademyru"></a>
+                  <span class="visually-hidden">Youtube</span>
+               </li>
+            </ul>
+         </section>
+         <section class="footer-contact">
+            <h2 class="visually-hidden">Телефон</h2>
+            <a class="footer-contact-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+         </section>
+         <section class="logo">
+            <h2 class="visually-hidden">Логотип</h2>
+            <img class="footer-logo" src="images/logo-html-academy.svg" width="114.9" height="32.9" alt="Логотип html-academy">
+         </section>
+      </footer>
+   </body>
 </html>
