удаляет left у картинки преимущества 2

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                </dl>
                <li class="advantages-item">Там есть мост дьявола</li>
                <p class=”advantages-description”> Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-               <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" left="400" alt="Коньон">
+               <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                <li class="advantages-item">Небольшая площадь</li>
                <p class=”advantages-description”>Все достопримечательности находятся очень близко</p>
                <li class="advantages-item">Красивая дорога</li>
