--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
    </head>
    <body>
       <header class="page-header">
+         <a class="page-logo" href="index.html">
+          <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
+         </a>
          <nav class="navigation">
-            <img class="page-logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
-            </a>
             <ul class="navigation-list">
                <li class="navigation-item">
                   <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
