--- a/catalog.html
+++ b/catalog.html
@@ -58,19 +58,19 @@
                <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                      <label class="control">
-                     <input class="control-input" type="checkbox" name="бассейн" checked>
+                     <input class="control-input" type="checkbox" name="бассейн" value="pool" checked>
                      Бассейн
                      </label>
                   </li>
                   <li class="catalog-filter-item">
                      <label class="control">
-                     <input class="control-input" type="checkbox" name="парковка" checked>
+                     <input class="control-input" type="checkbox" name="парковка" value="parking" checked>
                      Парковка
                      </label>
                   </li>
                   <li class="catalog-filter-item">
                      <label class="control">
-                     <input class="control-input" type="checkbox" name="wi-fi">
+                     <input class="control-input" type="checkbox" name="wi-fi" value="wi-fi">
                      Wi-Fi
                      </label>
                   </li>
