изменяет meter на div
для ползунка в фильтре

--- a/catalog.html
+++ b/catalog.html
@@ -104,9 +104,8 @@
                   <label>от<input type="text" value="0"></label>
                   <label>до<input type="text" value="9000"></label>
                </p>
-               <p>
-                  <meter min="0" max="9000"></meter>
-               </p>
+              <div class="catalog-filter-row" min="0" max="9000"></div>
+
             </fieldset>
             <button class="button" type="button">Применить</button>
             <button class="button" type="button">Сбросить</button>
