изменят type для кнопки

--- a/catalog.html
+++ b/catalog.html
@@ -108,7 +108,7 @@
 
             </fieldset>
             <button class="button" type="button">Применить</button>
-            <button class="button" type="button">Сбросить</button>
+            <button class="button" type="reset">Сбросить</button>
           </form>
          </section>
          <section class="catalog-products">
