--- a/catalog.html
+++ b/catalog.html
@@ -112,8 +112,7 @@
           </form>
          </section>
          <section class="catalog-products">
-            <h2 class="visually-hidden">Результаты поиска</h2>
-            <b>Найдено гостиниц: 38</b>
+            <h2 class="catalog-products-title">Найдено гостиниц: 38</h2>
             <select class="select-control" aria-label="Сортировка">
                <option value="cheap">Сначала дешёвые</option>
             </select>
