--- a/catalog.html
+++ b/catalog.html
@@ -111,7 +111,7 @@
             <button class="button" type="reset">Сбросить</button>
           </form>
          </section>
-         <section class="catalog-products">
+         <div class="catalog-products">
             <h2 class="catalog-products-title">Найдено гостиниц: 38</h2>
             <select class="select-control" aria-label="Сортировка">
                <option value="cheap">Сначала дешёвые</option>
@@ -125,7 +125,7 @@
             <a class="button" href="#">
             <span class="visually-hidden">Показать список</span>
             </a>
-         </section>
+         </div>
          <div class="product-card">
             <a class="product-card-link" href="#">
                <img class="product-card-image" src="images/hotel-1-1.jpg" width="300" height="211" alt="Коньон и звездное небо в Amara Resort & Spa">
