--- a/catalog.html
+++ b/catalog.html
@@ -126,78 +126,48 @@
             <span class="visually-hidden">Показать список</span>
             </a>
          </div>
-         <div class="product-card">
+         <ul class="product-list">
+          <li class="product-card">
             <a class="product-card-link" href="#">
-               <img class="product-card-image" src="images/hotel-1-1.jpg" width="300" height="211" alt="Коньон и звездное небо в Amara Resort & Spa">
-               <h3 class="product-card-title">Amara Resort & Spa</h3>
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Amara Resort & Spa</h3>
             </a>
             <div>Гостиница</div>
-            <div>От 4000 ₽</div>
-            <a class="product-card-button button" href="#">подробнее</a>
-            <button class="button" type="add">в избранное</button>
-            <div class="rating-result">
-               <span class="active"></span>
-               <span class="active"></span>
-               <span class="active"></span>
-               <span class="active"></span>
-               <span></span>
-            </div>
-            <img class="product-card-image" src="#" alt="Описание картинки">
-         </div>
-         <div class="product-card">
+                <div>От 4000 ₽</div>
+                <a class="product-card-button button" href="#">подробнее</a>
+                <button class="button" type="add">в избранное</button>
+          </li>
+          <li class="product-card">
             <a class="product-card-link" href="#">
-               <img class="product-card-image" src="images/hotel-1-2.jpg" width="300" height="211" alt="Вид на горы в Villas at Poco Diablo">
-               <h3 class="product-card-title">Villas at Poco Diablo</h3>
+              <img class="product-card-image" src="images/hotel-1-2.jpg" width="300" height="211" alt="Вид на горы в Villas at Poco Diablo">
+              <h3 class="product-card-title">Villas at Poco Diablo</h3>
             </a>
             <div>Гостиница</div>
-            <div>От 5000 ₽</div>
-            <a class="product-card-button button" href="#">подробнее</a>
-            <button class="button" type="add">в избранное</button>
-            <div class="rating-result">
-               <span class="active"></span>
-               <span class="active"></span>
-               <span class="active"></span>
-               <span class="active"></span>
-               <span></span>
-            </div>
-            <img class="product-card-image" src="#" alt="Описание картинки">
-         </div>
-         <div class="product-card">
+                <div>От 5000 ₽</div>
+                <a class="product-card-button button" href="#">подробнее</a>
+                <button class="button" type="add">в избранное</button>
+          </li>
+          <li class="product-card">
             <a class="product-card-link" href="#">
-               <img class="product-card-image" src="images/hotel-1-3.jpg" width="300" height="211" alt="Вид на горы в Desert Quail Inn">
-               <h3 class="product-card-title">Desert Quail Inn</h3>
+              <img class="product-card-image" src="images/hotel-1-3.jpg" width="300" height="211" alt="Вид на горы в Desert Quail Inn">
+              <h3 class="product-card-title">Desert Quail Inn</h3>
             </a>
             <div>Гостиница</div>
-            <div>От 2500 ₽</div>
-            <a class="product-card-button button" href="#">подробнее</a>
-            <button class="button" type="add">в избранное</button>
-            <div class="rating-result">
-               <span class="active"></span>
-               <span class="active"></span>
-               <span class="active"></span>
-               <span></span>
-               <span></span>
-            </div>
-            <img class="product-card-image" src="#" alt="Описание картинки">
-         </div>
-         <div class="product-card">
+                <div>От 2500 ₽</div>
+                <a class="product-card-button button" href="#">подробнее</a>
+                <button class="button" type="add">в избранное</button>
+          </li>
+          <li class="product-card">
             <a class="product-card-link" href="#">
-               <img class="product-card-image" src="images/hotel-1.jpg" width="300" height="211" alt="Звездное небо и горы в GreenTree Inn">
-               <h3 class="product-card-title">GreenTree Inn</h3>
+              <img class="product-card-image" src="images/hotel-1.jpg" width="300" height="211" alt="Звездное небо и горы в GreenTree Inn">
+              <h3 class="product-card-title">GreenTree Inn</h3>
             </a>
             <div>Гостиница</div>
-            <div>От 1500 ₽</div>
-            <a class="product-card-button button" href="#">подробнее</a>
-            <button class="button" type="add">в избранное</button>
-            <div class="rating-result">
-               <span class="active"></span>
-               <span class="active"></span>
-               <span></span>
-               <span></span>
-               <span></span>
-            </div>
-            <img class="product-card-image" src="#" alt="Описание картинки">
-         </div>
+                <div>От 1500 ₽</div>
+                <a class="product-card-button button" href="#">подробнее</a>
+                <button class="button" type="add">в избранное</button>
+          </li>
+          </ul>
          <ul class="pagination">
             <li class="pagination-item">
                <a class="pagination-link pagination-current">1</a>
