--- a/catalog.html
+++ b/catalog.html
@@ -190,7 +190,7 @@
                </a>
             </li>
          </ul>
-         Гостиниц на странице:
+         <div>Гостиниц на странице:</div>
          <select class="select-control" aria-label="Гостиниц на странице:">
             <option value="cheap">4</option>
          </select>
