добавляет тег div
для pagination и select

--- a/catalog.html
+++ b/catalog.html
@@ -168,7 +168,8 @@
                 <button class="button" type="add">в избранное</button>
           </li>
           </ul>
-         <ul class="pagination">
+         <div>
+           <ul class="pagination">
             <li class="pagination-item">
                <a class="pagination-link pagination-current">1</a>
             </li>
@@ -194,6 +195,7 @@
          <select class="select-control" aria-label="Гостиниц на странице:">
             <option value="cheap">4</option>
          </select>
+         </div>
       </main>
       <section class="appointment-catalog">
          <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
