--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    </head>
    <body>
       <header class="page-header">
-         <a class="page-logo" href="index.html">
+         <a class="page-logo">
           <img class="logo" src="images/logo.svg" width="139" height="70" alt="Логотип Седона">
          </a>
          <nav class="navigation">
