--- a/index.html
+++ b/index.html
@@ -39,11 +39,8 @@
          </nav>
       </header>
       <main class="main-index">
-         <h1 class="visually-hidden">SEDONA</h1>
-         <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA"
-         <p>
-         <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-         </p>
+         <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
+         <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
          <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
          <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
