--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
          </section>
       </main>
       <section class="appointment">
-         <h2 class="appointment-title"><b>Подпишитесь на рассылку</b></h2>
+         <h2 class="appointment-title">Подпишитесь на рассылку</h2>
          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
          <form class="appointment-form-email> action="https://echo.htmlacademy.ru/" method="post">
          <label for="appointment-email"></label>
