--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
          <form class="appointment-form-email> action="https://echo.htmlacademy.ru/" method="post">
          <label for="appointment-email"></label>
          <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
-         <button class="button" type="submit">ПОДПИСАТЬСЯ</button>
+         <button class="button" type="submit">подписаться</button>
          </form>
       </section>
       <footer class="page-footer">
