--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <section class="appointment">
          <h2 class="appointment-title">Подпишитесь на рассылку</h2>
          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-         <form class="appointment-form-email> action="https://echo.htmlacademy.ru/" method="post">
+         <form class="appointment-form-email" action="https://echo.htmlacademy.ru/" method="post">
          <label for="appointment-email"></label>
          <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
          <button class="button" type="submit">подписаться</button>
