--- a/catalog.html
+++ b/catalog.html
@@ -129,7 +129,7 @@
          <ul class="product-list">
           <li class="product-card">
             <a class="product-card-link" href="#">
-              <img class="product-card-image" src="" alt="">
+              <img class="product-card-image" src="images/hotel-1-1.jpg" width="300" height="211" alt="Вид на звездное небо через ущелье коньона">
               <h3 class="product-card-title">Amara Resort & Spa</h3>
             </a>
             <div>Гостиница</div>
