добавляет span в чекбоксы и радиокнопки

--- a/catalog.html
+++ b/catalog.html
@@ -59,19 +59,19 @@
                   <li class="catalog-filter-item">
                      <label class="control">
                      <input class="control-input" type="checkbox" name="бассейн" value="pool" checked>
-                     Бассейн
+                     <span class="control-span">Бассейн</span>
                      </label>
                   </li>
                   <li class="catalog-filter-item">
                      <label class="control">
                      <input class="control-input" type="checkbox" name="парковка" value="parking" checked>
-                     Парковка
+                     <span class="control-span">Парковка</span>
                      </label>
                   </li>
                   <li class="catalog-filter-item">
                      <label class="control">
                      <input class="control-input" type="checkbox" name="wi-fi" value="wi-fi">
-                     Wi-Fi
+                     <span class="control-span">Wi-fi</span>
                      </label>
                   </li>
                </ul>
@@ -82,19 +82,19 @@
                <li class="catalog-filter-item">
                   <label class="control">
                   <input class="control-input" type="radio" name="type of housing" value="hotel" checked>
-                  Гостиница
+                  <span class="control-span">Гостиница</span>
                   </label>
                </li>
                <li class="catalog-filter-item">
                   <label class="control">
                   <input class="control-input" type="radio" name="type of housing" value="motel">
-                  Мотель
+                  <span class="control-span">Мотель</span>
                   </label>
                </li>
                <li class="catalog-filter-item">
                   <label class="control">
                   <input class="control-input" type="radio" name="type of housing" value="apartments">
-                  Апартаменты
+                  <span class="control-span">Апартаменты</span>
                   </label>
                </li>
             </fieldset>
