--- a/catalog.html
+++ b/catalog.html
@@ -201,9 +201,9 @@
          <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
          <form class="appointment-catalog-form-email> action="https://echo.htmlacademy.ru/" method="post">
-         <label for="appointment-email"></label>
+         <label for="appointment-email">E-mail</label>
          <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
-         <button class="button" type="submit">ПОДПИСАТЬСЯ</button>
+         <button class="button" type="submit">подписаться</button>
          </form>
       </section>
       <footer class="page-footer">
