исправляет кнопку на ссылку в карточке каталога и добавляет класс для разных стилей ссылки

--- a/catalog.html
+++ b/catalog.html
@@ -134,8 +134,8 @@
             </a>
             <div>Гостиница</div>
                 <div>От 4000 ₽</div>
-                <a class="product-card-button button" href="#">подробнее</a>
-                <button class="button" type="add">в избранное</button>
+                <a class="product-card-button button brown" href="#">подробнее</a>
+                <a class="product-card-button button blue" href="#">в избранное</a>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="#">
@@ -144,8 +144,8 @@
             </a>
             <div>Гостиница</div>
                 <div>От 5000 ₽</div>
-                <a class="product-card-button button" href="#">подробнее</a>
-                <button class="button" type="add">в избранное</button>
+                <a class="product-card-button button brown" href="#">подробнее</a>
+                <a class="product-card-button button green" href="#">в избранное</a>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="#">
@@ -154,8 +154,8 @@
             </a>
             <div>Гостиница</div>
                 <div>От 2500 ₽</div>
-                <a class="product-card-button button" href="#">подробнее</a>
-                <button class="button" type="add">в избранное</button>
+                <a class="product-card-button button brown" href="#">подробнее</a>
+                <a class="product-card-button button blue" href="#">в избранное</a>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="#">
@@ -164,8 +164,8 @@
             </a>
             <div>Гостиница</div>
                 <div>От 1500 ₽</div>
-                <a class="product-card-button button" href="#">подробнее</a>
-                <button class="button" type="add">в избранное</button>
+                <a class="product-card-button button brown" href="#">подробнее</a>
+                <a class="product-card-button button blue" href="#">в избранное</a>
           </li>
           </ul>
          <div>
