--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
          <h2 class="appointment-title">Подпишитесь на рассылку</h2>
          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
          <form class="appointment-form-email" action="https://echo.htmlacademy.ru/" method="post">
-         <label for="appointment-email">E-mail</label>
+         <label class="visually-hidden" for="appointment-email">E-mail</label>
          <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
          <button class="button" type="submit">подписаться</button>
          </form>
