--- a/index.html
+++ b/index.html
@@ -46,30 +46,37 @@
          <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="advantages-list">
-               <li class="advantages-item">Настоящий городок</li>
-               <p class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-               <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
-               <dl>
-                  <dt>Жильё</dt>
-                  <dd>Рекомендуем пожить в настоящем мотеле, всё как в кино!</dd>
-               </dl>
-               <dl>
-                  <dt>Еда</dt>
-                  <dd>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</dd>
-               </dl>
-               <dl>
-                  <dt>Сувениры</dt>
-                  <dd>Не только китайского, но и настоящего местного производства!</dd>
-               </dl>
-               <li class="advantages-item">Там есть мост дьявола</li>
-               <p class=”advantages-description”> Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-               <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
-               <li class="advantages-item">Небольшая площадь</li>
-               <p class=”advantages-description”>Все достопримечательности находятся очень близко</p>
-               <li class="advantages-item">Красивая дорога</li>
-               <p class=”advantages-description”>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-               <li class="advantages-item">Мало туристов</li>
-               <p class=”advantages-description”>Большинство едет в Гранд Каньон и толпится там</p>
+               <li class="advantages-item">Настоящий городок
+                 <div advantages-numb>— №1 —</div>
+                 <div class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
+                 <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
+               </li>
+               <li class="advantages-item advantages-item-text advantages-item-color">Жильё
+                <div class=”advantages-description advantages-description-text”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
+              </li>
+              <li class="advantages-item advantages-item-text">Еда
+                <div class=”advantages-description advantages-description-text”>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
+              </li>
+              <li class="advantages-item advantages-item-text advantages-item-color">Сувениры
+                <div class=”advantages-description advantages-description-text”>Не только китайского, но и настоящего местного производства!</div>
+              </li>
+              <li class="advantages-item">Там есть мост дьявола
+                <div advantages-numb>— №2 —</div>
+                <div class=”advantages-description”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
+                <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
+              </li>
+              <li class="advantages-item advantages-item-text advantages-item-light">Небольшая площадь
+                <div advantages-numb numb-color>— №3 —</div>
+                <div class=”advantages-description advantages-description-text”>Все достопримечательности находятся очень близко</div>
+              </li>
+              <li class="advantages-item advantages-item-text advantages-item-color">Красивая дорога
+                <div advantages-numb numb-color>— №4 —</div>
+                <div class=”advantages-description advantages-description-text”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+              </li>
+              <li class="advantages-item advantages-item-text advantages-item-light">Мало туристов
+                <div advantages-numb numb-color>— №5 —</div>
+                <div class=”advantages-description advantages-description-text”>Большинство едет в Гранд Каньон и толпится там</div>
+              </li>
             </ul>
          </section>
          <section class="search">
