изменяет наименование стилей у блока с преимуществами

--- a/index.html
+++ b/index.html
@@ -46,36 +46,44 @@
          <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="advantages-list">
-               <li class="advantages-item">Настоящий городок
-                 <div advantages-numb>— №1 —</div>
-                 <div class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
+               <li class="advantages-item">
+                 <div class="advantages-item-city">Настоящий городок</div>
+                 <div clsss="advantages-numb">— №1 —</div>
+                 <div class=”advantages-description-life”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
                  <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                </li>
-               <li class="advantages-item advantages-item-text advantages-item-color">Жильё
-                <div class=”advantages-description advantages-description-text”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
+               <li class="advantages-item">
+                <div class="advantages-item-home">Жильё</div>
+                <div class=”advantages-description-hotel”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
               </li>
-              <li class="advantages-item advantages-item-text">Еда
-                <div class=”advantages-description advantages-description-text”>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
+              <li class="advantages-item">
+                <div class="advantages-item-meal">Еда</div>
+                <div class=”advantages-description-burger”>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</div>
               </li>
-              <li class="advantages-item advantages-item-text advantages-item-color">Сувениры
-                <div class=”advantages-description advantages-description-text”>Не только китайского, но и настоящего местного производства!</div>
+              <li class="advantages-item">
+                <div class="advantages-item-souvenirs">Сувениры</div>
+                <div class=”advantages-description-local”>Не только китайского, но и настоящего местного производства!</div>
               </li>
-              <li class="advantages-item">Там есть мост дьявола
-                <div advantages-numb>— №2 —</div>
-                <div class=”advantages-description”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
+              <li class="advantages-item">
+                <div class="advantages-item-bridge">Там есть мост дьявола</div>
+                <div class="advantages-numb">— №2 —</div>
+                <div class=”advantages-description-go”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
                 <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
               </li>
-              <li class="advantages-item advantages-item-text advantages-item-light">Небольшая площадь
-                <div advantages-numb numb-color>— №3 —</div>
-                <div class=”advantages-description advantages-description-text”>Все достопримечательности находятся очень близко</div>
+              <li class="advantages-item">
+                <div class="advantages-item-space">Небольшая площадь</div>
+                <div class="advantages-numb numb-color">— №3 —</div>
+                <div class=”advantages-description-close”>Все достопримечательности находятся очень близко</div>
               </li>
-              <li class="advantages-item advantages-item-text advantages-item-color">Красивая дорога
-                <div advantages-numb numb-color>— №4 —</div>
-                <div class=”advantages-description advantages-description-text”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+              <li class="advantages-item">
+                <div class="advantages-item-road">Красивая дорога</div>
+                <div class="advantages-numb numb-color">— №4 —</div>
+                <div class=”advantages-description-not-boring”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
               </li>
-              <li class="advantages-item advantages-item-text advantages-item-light">Мало туристов
-                <div advantages-numb numb-color>— №5 —</div>
-                <div class=”advantages-description advantages-description-text”>Большинство едет в Гранд Каньон и толпится там</div>
+              <li class="advantages-item">
+                <div class="advantages-item-rew">Мало туристов</div>
+                <div class="advantages-numb numb-color">— №5 —</div>
+                <div class=”advantages-description-most”>Большинство едет в Гранд Каньон и толпится там</div>
               </li>
             </ul>
          </section>
