изменяет класс у ссылки подробнее

--- a/catalog.html
+++ b/catalog.html
@@ -135,7 +135,7 @@
             </a>
             <div>Гостиница</div>
                 <div>От 4000 ₽</div>
-                <a class="product-card-button button brown" href="#">подробнее</a>
+                <a class="button detailed" href="#">подробнее</a>
                 <a class="product-card-button button blue" href="#">в избранное</a>
           </li>
           <li class="product-card">
@@ -145,7 +145,7 @@
             </a>
             <div>Гостиница</div>
                 <div>От 5000 ₽</div>
-                <a class="product-card-button button brown" href="#">подробнее</a>
+                <a class="button detailed" href="#">подробнее</a>
                 <a class="product-card-button button green" href="#">в избранное</a>
           </li>
           <li class="product-card">
@@ -155,7 +155,7 @@
             </a>
             <div>Гостиница</div>
                 <div>От 2500 ₽</div>
-                <a class="product-card-button button brown" href="#">подробнее</a>
+                <a class="button detailed" href="#">подробнее</a>
                 <a class="product-card-button button blue" href="#">в избранное</a>
           </li>
           <li class="product-card">
@@ -165,7 +165,7 @@
             </a>
             <div>Гостиница</div>
                 <div>От 1500 ₽</div>
-                <a class="product-card-button button brown" href="#">подробнее</a>
+                <a class="button detailed" href="#">подробнее</a>
                 <a class="product-card-button button blue" href="#">в избранное</a>
           </li>
           </ul>
