изменяет класс для кнопок в карточках

--- a/catalog.html
+++ b/catalog.html
@@ -135,8 +135,8 @@
             </a>
             <div>Гостиница</div>
                 <div>От 4000 ₽</div>
-                <a class="button detailed" href="#">подробнее</a>
-                <a class="product-card-button button blue" href="#">в избранное</a>
+                <a class="button-detailed" href="#">подробнее</a>
+                <a class="button-favourites" href="#">в избранное</a>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="#">
@@ -145,8 +145,8 @@
             </a>
             <div>Гостиница</div>
                 <div>От 5000 ₽</div>
-                <a class="button detailed" href="#">подробнее</a>
-                <a class="product-card-button button green" href="#">в избранное</a>
+                <a class="button-detailed" href="#">подробнее</a>
+                <a class="button-favourites" href="#">в избранное</a>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="#">
@@ -155,8 +155,8 @@
             </a>
             <div>Гостиница</div>
                 <div>От 2500 ₽</div>
-                <a class="button detailed" href="#">подробнее</a>
-                <a class="product-card-button button blue" href="#">в избранное</a>
+                <a class="button-detailed" href="#">подробнее</a>
+                <a class="button-favourites" href="#">в избранное</a>
           </li>
           <li class="product-card">
             <a class="product-card-link" href="#">
@@ -165,8 +165,8 @@
             </a>
             <div>Гостиница</div>
                 <div>От 1500 ₽</div>
-                <a class="button detailed" href="#">подробнее</a>
-                <a class="product-card-button button blue" href="#">в избранное</a>
+                <a class="button-detailed" href="#">подробнее</a>
+                <a class="button-favourites" href="#">в избранное</a>
           </li>
           </ul>
          <div>
