добавляет div звезды и рейтинг

--- a/catalog.html
+++ b/catalog.html
@@ -135,6 +135,8 @@
                <div>От 4000 ₽</div>
                <a class="button-detailed" href="#">подробнее</a>
                <a class="button-favourites" href="#">в избранное</a>
+               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
+               <div class="rating">Рейтинг: 8,5</div>
             </li>
             <li class="product-card">
                <a class="product-card-link" href="#">
@@ -145,6 +147,8 @@
                <div>От 5000 ₽</div>
                <a class="button-detailed" href="#">подробнее</a>
                <a class="button-favourites" href="#">в избранное</a>
+               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
+               <div class="rating">Рейтинг: 9,2</div>
             </li>
             <li class="product-card">
                <a class="product-card-link" href="#">
@@ -155,6 +159,8 @@
                <div>От 2500 ₽</div>
                <a class="button-detailed" href="#">подробнее</a>
                <a class="button-favourites" href="#">в избранное</a>
+               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
+               <div class="rating">Рейтинг: 6,9</div>
             </li>
             <li class="product-card">
                <a class="product-card-link" href="#">
@@ -165,6 +171,8 @@
                <div>От 1500 ₽</div>
                <a class="button-detailed" href="#">подробнее</a>
                <a class="button-favourites" href="#">в избранное</a>
+               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
+               <div class="rating">Рейтинг: 5,0</div>
             </li>
           </ul>
           <div>
