--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <main class="main-index">
          <img class="logo" src="images/welcome.svg" width="458" height="352" alt="Welcome SEDONA">
          <h1 class="main-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+         <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
          <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
             <ul class="advantages-list">
