добавляет классы для strong и р

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
          </section>
          <section class="search">
             <h2 class="visually-hidden">Поиск гостиницы</h2>
-            <strong>Заинтересовались?</strong>
-            <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <strong class="interest">Заинтересовались?</strong>
+            <p class="best">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="button" href="#"><b>Поиск гостиницы в Седоне</b></a>
          </section>
       </main>
