--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </main>
       <section class="appointment">
          <h2 class="appointment-title">Подпишитесь на рассылку</h2>
-         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+         <p class="appointment-paragraph">Только полезная информация и никакого спама, честное бойскаутское!</p>
          <form class="appointment-form-email" action="https://echo.htmlacademy.ru/" method="post">
             <label class="visually-hidden" for="appointment-email">E-mail</label>
             <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
