--- a/catalog.html
+++ b/catalog.html
@@ -205,8 +205,8 @@
           </div>
       </main>
       <section class="appointment-catalog">
-         <h2 class="appointment-catalog-title"><b>Подпишитесь на рассылку</b></h2>
-         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+         <h2 class="appointment-catalog-title">Подпишитесь на рассылку</h2>
+         <p class="appointment-catalog-paragraph">Только полезная информация и никакого спама, честное бойскаутское!</p>
          <form class="appointment-catalog-form-email> action="https://echo.htmlacademy.ru/" method="post">
            <label class="visually-hidden" for="appointment-email">E-mail</label>
            <input type="text" id="appointment-email" name="appointment-email" placeholder="Ваш e-mail">
