меняет класс у div и h1

--- a/catalog.html
+++ b/catalog.html
@@ -110,8 +110,8 @@
             <button class="button" type="button">Применить</button>
             <button class="button" type="reset">Сбросить</button>
           </section>
-          <div class="catalog-products">
-            <h2 class="catalog-products-title">Найдено гостиниц: 38</h2>
+          <div class="filter-menu">
+            <h2 class="filter-menu-title">Найдено гостиниц: 38</h2>
             <select class="select-control" aria-label="Сортировка">
                <option value="cheap">Сначала дешёвые</option>
             </select>
