добавляет класс для пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -175,7 +175,7 @@
                <div class="rating">Рейтинг: 5,0</div>
             </li>
           </ul>
-          <div>
+          <div class="page-pagination">
             <ul class="pagination">
                <li class="pagination-item">
                   <a class="pagination-link pagination-current">1</a>
