--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                   <div class="advantages-item-city">Настоящий городок</div>
                   <div clsss="advantages-numb">— №1 —</div>
                   <div class=”advantages-description-life”>Седона — не аттракцион для туристов, там течёт своя жизнь</div>
-                  <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
+                  <div class="advantages-image-city">
+                    <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
+                  </div>
                </li>
                <li class="advantages-item">
                   <div class="advantages-item-home">Жильё</div>
@@ -68,7 +70,9 @@
                   <div class="advantages-item-bridge">Там есть мост дьявола</div>
                   <div class="advantages-numb">— №2 —</div>
                   <div class=”advantages-description-go”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</div>
-                  <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
+                  <div class="advantages-image-bridge"></div>
+                    <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
+                  </div>
                </li>
                <li class="advantages-item">
                   <div class="advantages-item-space">Небольшая площадь</div>
